k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartmeeting  # Базовое имя, будет переопределено в overlays
