k8s/base/celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      component: celery-worker
  template:
    metadata:
      labels:
        component: celery-worker
    spec:
      containers:
        - name: celery
          image: cr.yandex/crpfasovola9dqldhpk4/smartmeeting:dev
          imagePullPolicy: IfNotPresent
          command: ["celery", "-A", "smartmeeting", "worker", "-l", "info"]
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "384Mi"
              cpu: "300m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      component: celery-beat
  template:
    metadata:
      labels:
        component: celery-beat
    spec:
      containers:
        - name: celery-beat
          image: cr.yandex/crpfasovola9dqldhpk4/smartmeeting:dev
          imagePullPolicy: IfNotPresent
          command:
            - "celery"
            - "-A"
            - "smartmeeting"
            - "beat"
            - "-l"
            - "info"
            - "--scheduler"
            - "django_celery_beat.schedulers:DatabaseScheduler"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
