k8s/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: web
          image: cr.yandex/crpjk67er58r3atnlgii/smartmeeting:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          command: ["gunicorn"]
          args:
            - "--bind"
            - "0.0.0.0:8000"
            - "smartmeeting.wsgi:application"
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "384Mi"
              cpu: "300m"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    component: web
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
